--- a/Git e Github/site-de-vendas/Blog.html
+++ b/Git e Github/site-de-vendas/Blog.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página de vendas</h1>
+    <h1>Página de Blog</h1>
+    <h2>Post número 1</h2>
+    <h2>Post número 2</h2>
     <a href="Index.html">Voltar para a página inicial</a>
-    <p>Vendas = R$ 5000,00</p>
 </body>
 </html>
