--- a/Git e Github/site-de-vendas/Sobre.html
+++ b/Git e Github/site-de-vendas/Sobre.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página de vendas</h1>
+    <h1>Sobre</h1>
     <a href="Index.html">Voltar para a página inicial</a>
-    <p>Vendas = R$ 5000,00</p>
 </body>
 </html>
