--- a/Projetos_web/010/index.html
+++ b/Projetos_web/010/index.html
@@ -10,6 +10,16 @@
 <body>
     <h3>Este é o fantástico planeta Marte!</h3>
     <img src="planet_mars.jpg" alt="Planeta Marte">
+    <p>Agora você já pode viajar até o planeta Marte. Caso queira obter mais informações, consulte os links abaixo</p>
+
+    <ul>
+        <li>
+            <a href="https://www.nasa.gov/mars" target="_blank">Nasa - Planeta Marte</a>
+        </li>
+        <li>
+            <a href="https://pt.wikipedia.org/wiki/Marte_(planeta)">Marte na Wikipédia</a>
+        </li>
+    </ul>
 </body>
 
 </html>
