--- a/Projetos_web/Atividade final Cap1/servicos.html
+++ b/Projetos_web/Atividade final Cap1/servicos.html
@@ -12,59 +12,57 @@
 
 <body>
 
+    <!-- cabeçalho -->
+    <header class="container-cabecalho">
+        <a href="index.html">
+            <img src="assets/images/logo_empresa.png" alt="logo_empresa">
+        </a>
+        <h3>Inteligência Artificial</h3>
+    </header>
 
+    <!-- navegação -->
+    <nav class="container-navegacao">
+        <a href="index.html">Quem somos</a>
+        <a href="servicos.html">Nossos serviços</a>
+        <a href="contatos.html">Contatos</a>
+    </nav>
 
+    <!-- serviços -->
+    <section class="container-servicos">
+        <h1 class="text-center">Os nosso serviços</h1>
+
+        <article>
+            <h3>Soluções inovadoras para a sua empresa</h3>
+            <ul>
+                <li>Desenhamos novas soluções para aumento de produtividade</li>
+                <li>Aumentamos a performance dos colaboradores.</li>
+                <li>Incremento garantido de 20% nos lucros da empresa.</li>
+            </ul>
+        </article>
+
+        <article>
+            <h3>Projetamos o futuro do seu negócio</h3>
+            <ol>
+                <li>Pensamos na melhor solução</li>
+                <li>Desenvolvemos o produto em parceria com você</li>
+                <li>Aplicamos a solução na empresa.</li>
+                <li>Fazemos a monitorização do processo.</li>
+            </ol>
+        </article>
+    </section>
+
+    <!-- ver servicos ou contatos -->
+    <section class="container-servicos-contatos">
+        <h1>Obtenha mais informações na área de contatos e em quem somos.</h1>
+        <div class="botoes-servicos-contatos">
+            <a href="contatos.html">Contatos</a>
+            <a href="index.html">Quem somos</a>
+        </div>
+    </section>
+
+    <footer>
+        Inteligência Artificial &copy; 2030 | &reg; Todos os direitos reservados.
+    </footer>
 </body>
 
-
-<!-- cabeçalho -->
-<header class="container-cabecalho">
-    <a href="index.html">
-        <img src="assets/images/logo_empresa.png" alt="logo_empresa">
-    </a>
-    <h3>Inteligência Artificial</h3>
-</header>
-
-<!-- navegação -->
-<nav class="container-navegacao">
-    <a href="index.html">Quem somos</a>
-    <a href="servicos.html">Nossos serviços</a>
-    <a href="contatos.html">Contatos</a>
-</nav>
-
-<!-- serviços -->
-<section class="container-servicos">
-    <h1 class="text-center">Os nosso serviços</h1>
-
-    <article>
-        <h3>Soluções inovadoras para a sua empresa</h3>
-        <ul>
-            <li>Desenhamos novas soluções para aumento de produtividade</li>
-            <li>Aumentamos a performance dos colaboradores.</li>
-            <li>Incremento garantido de 20% nos lucros da empresa.</li>
-        </ul>
-    </article>
-
-    <article>
-        <h3>Projetamos o futuro do seu negócio</h3>
-        <ol>
-            <li>Pensamos na melhor solução</li>
-            <li>Desenvolvemos o produto em parceria com você</li>
-            <li>Aplicamos a solução na empresa.</li>
-            <li>Fazemos a monitorização do processo.</li>
-        </ol>
-    </article>
-</section>
-
-<!-- ver servicos ou contatos -->
-<section class="container-servicos-contatos">
-    <h1>Obtenha mais informações na área de serviços e em contatos</h1>
-    <div class="botoes-servicos-contatos">
-        <a href="contatos.html">Contatos</a>
-    </div>
-</section>
-
-<footer>
-    Inteligência Artificial &copy; 2030 | &reg; Todos os direitos reservados.
-</footer>
 </html>
